--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -515,7 +515,7 @@ paths:
         201:
           description: "Returns message of success or failure"
           schema:
-            $ref: "#/definitions/CodespaceSecurityConfigVO"
+            $ref: "#/definitions/CodespaceSecurityConfigDetailsVO"
         204:
           description: "Fetch complete, no content found."
         400:
@@ -877,6 +877,16 @@ definitions:
       required:
         -recipeId
 
+  CodespaceSecurityConfigDetailsVO:
+    type: object
+    properties:
+      projectName:
+        type: string
+        description: "Name of the Project"
+      securityConfig:
+        $ref: "#/definitions/CodespaceSecurityConfigVO"
+  
+
   SecurityConfigResponseDto: 
     type: object
     properties:
@@ -984,7 +994,7 @@ definitions:
         type: string
         enum: ["POST","PUT","PATCH","GET","OPTIONS","HEAD","DELETE"]
         description: "Operating system required" 
-
+        
   CodespaceSecurityConfigVO: 
     type: object
     properties:
