--- a/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
@@ -1189,6 +1189,9 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/TeamMemberVO"
+      aiRiskAssessmentType:
+        type: string
+        enum: ["NOT_APPLICABLE", "BASIC_RISK", "HIGH_RISK"]    
   
   LinkVO:
     type: object
