--- a/.github/secret_scanning.yml
+++ b/.github/secret_scanning.yml
@@ -3,7 +3,7 @@ paths-ignore:
   - "deployment/dockerfiles/codeServer/mc"
   - "packages/storage-backend/mc"
   - "mc"
-  - "*.png"
-  - "*.svg"
-  - "*.jpg"
-  - "*.jpeg"
+  - "**.png"
+  - "**.svg"
+  - "**.jpg"
+  - "**.jpeg"
