--- a/packages/code-server/code-server-lib/src/main/resources/application.yml
+++ b/packages/code-server/code-server-lib/src/main/resources/application.yml
@@ -170,6 +170,9 @@ kong:
    authoriserRedirectAfterLogoutUri: ${AUTHORISER_REDIRECT_AFTER_LOGOUT_URI:XXXX}
    authoriserDiscovery: ${AUTHORISER_DISCOVERY:XXXX}
    authoriserIntrospectionEndpoint: ${AUTHORISER_INTROSPECTION_ENDPOINT:XXXX}
+   preFunctionBackendValue: ${PRE_FUNCTION_BACKEND_VALUE:XXXX}
+   postFunctionFrontendValue: ${POST_FUNCTION_FRONTEND_VALUE:XXXX}
+   preFunctionFrontendValue: ${PRE_FUNCTION_FRONTEND_VALUE:XXXX}
 
 workspace:
   update: ${UPDATE_WORKSPACEDATA:XXXX}   
