--- a/packages/code-space-mfe/package.json
+++ b/packages/code-space-mfe/package.json
@@ -76,6 +76,7 @@
     "env-cmd": "^10.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "marked": "^14.1.2",
     "popper.js": "^1.16.1",
     "postcss-loader": "^7.0.1",
     "react": "18.2.0",
