--- a/packages/powerplatform-backend/powerplatform-lib/src/main/resources/api/powerapp.yaml
+++ b/packages/powerplatform-backend/powerplatform-lib/src/main/resources/api/powerapp.yaml
@@ -335,7 +335,7 @@ definitions:
         type: string
       dyEnvOwnerName:
         type: string
-      dyEnvOwnerid:
+      dyEnvOwnerId:
         type: string
       department:
         type: string
