--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -111,8 +111,8 @@
     "@types/react-test-renderer": "^17.0.1",
     "@types/recharts": "^2.0.0",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
+    "@typescript-eslint/eslint-plugin": "8.8.0",
+    "@typescript-eslint/parser": "8.8.0",
     "autoprefixer": "^10.2.5",
     "babel-loader": "8.2.2",
     "browserify-zlib": "^0.2.0",
