--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -87,7 +87,7 @@
     "react-slider": "^2.0.1",
     "react-styleguidist": "^11.2.0",
     "react-tooltip": "^4.2.18",
-    "recharts": "^2.0.9",
+    "recharts": "2.12.7",
     "sass": "^1.35.0",
     "tslib": "2.3.0"
   },
@@ -109,10 +109,10 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-simple-maps": "^1.0.3",
     "@types/react-test-renderer": "^17.0.1",
-    "@types/recharts": "^2.0.0",
+    "@types/recharts": "1.8.29",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "8.8.0",
-    "@typescript-eslint/parser": "8.8.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "autoprefixer": "^10.2.5",
     "babel-loader": "8.2.2",
     "browserify-zlib": "^0.2.0",
