--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -145,6 +145,48 @@ paths:
   #
   # path example ../workspaces/{id}
 
+  /workspaces/{id}/{userId}:
+    put:
+      tags:
+        - "code-server"
+      summary: "Initialize Workbench for user by admin."
+      description: "Initialize workbench for collab user by admin"
+      operationId: "InitializeWorkspaceByAdmin"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Workspace ID to be fetched"
+          required: true
+          type: "string"
+        - name: "userId"
+          in: "path"
+          description: "user ID to be fetched"
+          required: true
+          type: "string"
+        - name: "initializeCollabWSRequestVO"
+          in: "body"
+          description: "Request Body that contains data required for intialize code server workbench for user"
+          required: true
+          schema:
+            $ref: "#/definitions/InitializeCollabWorkspaceRequestVO"
+      responses:
+        201:
+          description: "Returns message of success or failure "
+          schema:
+            $ref: "#/definitions/InitializeWorkspaceResponseVO"
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/GenericMessage"
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error"
+
   /workspaces/{id}:
     get:
       tags:
