--- a/packages/code-server/code-server-lib/src/main/resources/application.yml
+++ b/packages/code-server/code-server-lib/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   mvc.pathmatch.matching-strategy: ant_path_matcher
   application:
     name: dna-codeserver-service
-    version: 1.2.9
+    version: 1.2.10
   profile:
     active: production
 
@@ -96,6 +96,7 @@ codeServer:
   run.collab.admin: ${RUN_COLLAB_ADMIN:YOUR_COLLAB_BOOLEAN}
   collab.pid: ${COLLAB_PID:YOUR_COLLAB_PID}
   vault.baseuri: ${CODE_SERVER_VAULT_BASEURI:XXXX}
+  collab.adminbypass.projectname: ${COLLAB_BYPASS_PROJECTNAME:YOUR_PROJECT_NAME}
   codespace.filename: ${CODESPACE_FILE_NAME:YOUR_CODESPACE_FILE_NAME}
 
 swagger.headers.authorization.token: ${SWAGGER_HEADER_AUTH:XXXXXX}
