--- a/packages/code-server/code-server-lib/src/main/resources/application.yml
+++ b/packages/code-server/code-server-lib/src/main/resources/application.yml
@@ -173,9 +173,11 @@ kong:
    authoriserRedirectAfterLogoutUri: ${AUTHORISER_REDIRECT_AFTER_LOGOUT_URI:XXXX}
    authoriserDiscovery: ${AUTHORISER_DISCOVERY:XXXX}
    authoriserIntrospectionEndpoint: ${AUTHORISER_INTROSPECTION_ENDPOINT:XXXX}
-   preFunctionBackendValue: ${PRE_FUNCTION_BACKEND_VALUE:XXXX}
-   postFunctionFrontendValue: ${POST_FUNCTION_FRONTEND_VALUE:XXXX}
-   preFunctionFrontendValue: ${PRE_FUNCTION_FRONTEND_VALUE:XXXX}
+   preFunctionBackendFileName: ${PRE_FUNCTION_BACKEND_FILE_NAME:XXXX}
+   postFunctionFrontendFileName: ${POST_FUNCTION_FRONTEND_FILE_NAME:XXXX}
+   preFunctionFrontendFileName: ${PRE_FUNCTION_FRONTENDFILE_NAMEVALUE:XXXX}
+   functionPluginGitUrl: ${FUNCTION_PLUGINS_GIT_URL:XXXX}
+   functionPluginsFolderPath : ${FUNCTION_PLUGIN_FOLDER_PATH:XXXX}
 
 workspace:
   update: ${UPDATE_WORKSPACEDATA:XXXX}   
