--- a/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
+++ b/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
@@ -506,7 +506,7 @@ paths:
         500:
           description: "Internal error" 
 
- /kong/services/{serviceName}/functionplugin:
+ /kong/services/{serviceName}/functionPlugin:
     post:
       tags:
         - "kong" 
@@ -520,6 +520,47 @@ paths:
           required: true
           schema:
             $ref: "#/definitions/AttachFunctionPluginRequestVO"  
+        - name: "serviceName"
+          in: "path"
+          description: "Name of the service for which plugin has to be attached"
+          required: true
+          type: "string"    
+      responses:
+        200:
+          description: "Returns message of success"
+          schema:
+            $ref: "#/definitions/GenericMessage"
+        409:
+          description: "Conflict"
+          schema:
+            $ref: "#/definitions/GenericMessage"            
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/GenericMessage"
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error"  
+
+ /kong/services/{serviceName}/requestTransformerPlugin:
+    post:
+      tags:
+        - "kong" 
+      summary: "Attach requesttransformerplugin to service."
+      description: "Attach requesttransformerplugin to service."
+      operationId: "attachRequestTransformerPlugin"
+      parameters:      
+        - name: "attachRequestTransformerPluginRequestVO"
+          in: "body"
+          description: "Request Body that contains data required for attaching a plugin to service"
+          required: true
+          schema:
+            $ref: "#/definitions/AttachRequestTransformerPluginRequestVO"  
         - name: "serviceName"
           in: "path"
           description: "Name of the service for which plugin has to be attached"
@@ -992,3 +1033,30 @@ definitions:
         type: array
         items: 
           type: string
+
+ AttachRequestTransformerPluginRequestVO:
+    type: object
+    properties:
+      data:
+        $ref: "#/definitions/AttachRequestTransformerPluginVO"   
+
+ AttachRequestTransformerPluginVO:
+    type: object
+    properties:
+      config:
+        $ref: "#/definitions/AttachRequestTransformerPluginConfigVO"
+      name:
+        type: string
+    
+ AttachRequestTransformerPluginConfigVO:
+    type: object
+    properties:
+      remove:
+        type: object
+        properties:
+          headers:
+            type: array
+            items: 
+              type: string
+          
+    
