--- a/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
+++ b/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
@@ -866,6 +866,10 @@ definitions:
         type: string
       ignore_auth_filters:
         type: string
+      access_token_as_bearer:
+        type: string
+      access_token_header_name:
+        type: string
       claims_to_verify:
         type: string  
       key_claim_name:
