--- a/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
+++ b/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
@@ -586,7 +586,48 @@ paths:
         405:
           description: "Method not allowed"
         500:
-          description: "Internal error"  
+          description: "Internal error" 
+
+ /kong/services/{serviceName}/oneApiPlugin:
+    post:
+      tags:
+        - "kong" 
+      summary: "Attach one api Plugin to service."
+      description: "Attach one api Plugin to service."
+      operationId: "attachOneApiPlugin"
+      parameters:      
+        - name: "attachOneApiPluginRequestVO"
+          in: "body"
+          description: "Request Body that contains data required for attaching a plugin to service"
+          required: true
+          schema:
+            $ref: "#/definitions/AttachOneApiPluginRequestVO"  
+        - name: "serviceName"
+          in: "path"
+          description: "Name of the service for which plugin has to be attached"
+          required: true
+          type: "string"    
+      responses:
+        200:
+          description: "Returns message of success"
+          schema:
+            $ref: "#/definitions/GenericMessage"
+        409:
+          description: "Conflict"
+          schema:
+            $ref: "#/definitions/GenericMessage"            
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/GenericMessage"
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error" 
           
 # path to get service 
 #  supported http methods GET    
@@ -1062,5 +1103,25 @@ definitions:
             type: array
             items: 
               type: string
-          
+  
+ AttachOneApiPluginRequestVO:
+    type: object
+    properties:
+      data:
+        $ref: "#/definitions/AttachOneApiPluginVO"   
+
+ AttachOneApiPluginVO:
+    type: object
+    properties:
+      config:
+        $ref: "#/definitions/AttachOneApiPluginConfigVO"
+      name:
+        type: string
+    
+ AttachOneApiPluginConfigVO:
+    type: object
+    properties:
+      api_version_shortname:
+        type: string
+        
     
