--- a/packages/fabric-backend/lib/src/main/resources/application.yml
+++ b/packages/fabric-backend/lib/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   mvc.pathmatch.matching-strategy: ant_path_matcher
   application:
     name: dna-fabric-workspace-service
-    version: 1.1.6
+    version: 1.2.0
   profile:
     active: production
 
@@ -33,6 +33,8 @@ spring:
     driverClassName: org.postgresql.Driver
 
 fabricWorkspaces:
+  app.apikey: ${FABRIC_AUTH_APIKEY:xxxx}
+  app.appid: ${FABRIC_AUTH_APPID:xxxxx}
   clientId: ${FABRIC_OAUTH_CLIENT_ID:XXXX}
   clientSecret: ${FABRIC_OAUTH_CLIENT_SECRET:XXXX}
   grantType: ${FABRIC_OAUTH_GRANT_TYPE:client_credentials}
