--- a/packages/dataentry-mfe/package.json
+++ b/packages/dataentry-mfe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-entry-mfe",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "start": "env-cmd -f .env webpack server --config config/webpack.config.js",
@@ -73,7 +73,10 @@
     "@univerjs/engine-formula": "^0.1.17",
     "@univerjs/engine-numfmt": "^0.1.17",
     "@univerjs/engine-render": "^0.1.17",
+    "@univerjs/facade": "^0.1.17",
     "@univerjs/rpc": "^0.1.7",
+    "@univerjs/network": "^0.1.7",
+    "@univerjs/sheets-numfmt": "^0.1.7",
     "@univerjs/sheets": "^0.1.17",
     "@univerjs/sheets-formula": "^0.1.17",
     "@univerjs/sheets-ui": "^0.1.17",
@@ -104,7 +107,6 @@
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "url-loader": "^4.1.1",
-    "uuid": "^9.0.1",
     "webpack": "5.92.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3",
